name: common
version: 1.0.2.1
homepage:            gonimo.com
license:             AGPL-3
license-file:        LICENSE
author:              Robert Klotzner

maintainer:          robert[dot]klotzner[at]gmx[dot]at

category:            Web

cabal-version: >= 1.2
build-type: Simple

library
  hs-source-dirs: src
  build-depends: base
               , obelisk-route
               , mtl
               , text

  exposed-modules:
    Common.Api
    Common.Route
