name:                gonimo-common
version:             0.1-test
homepage:            gonimo.com
license:             AGPL-3
license-file:        LICENSE
author:              Robert Klotzner

maintainer:          robert[dot]klotzner[at]gmx[dot]at

category:            Web

build-type:          Simple

cabal-version:       >=1.10

Flag dev
    Description:   Turn on development settings.
    Default:       False

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  if flag(dev)
      cpp-options:   -DDEVELOPMENT
      ghc-options:   -Wall -fwarn-tabs -O0
  else
      ghc-options:   -Wall -Werror -fwarn-tabs -O2

  exposed-modules: Gonimo.SocketAPI
                 , Gonimo.SocketAPI.Model
                 , Gonimo.SocketAPI.View.Family
                 , Gonimo.SocketAPI.View.Account

                 , Gonimo.SocketAPI.V1
                 , Gonimo.SocketAPI.V1.View.Family
                 , Gonimo.SocketAPI.V1.View.Account

                 , Gonimo.Server.Error
                 , Gonimo.Prelude
                 , Gonimo.I18N
                 , Gonimo.Constants

                 , Reflex.Behavior

  default-extensions: ConstraintKinds
                    , DataKinds
                    , DeriveGeneric
                    , GeneralizedNewtypeDeriving
                    , OverloadedStrings
                    , PolyKinds
                    , TypeOperators
                    , ScopedTypeVariables
                    , FlexibleContexts

  build-depends:        aeson
                      , async
                      , attoparsec
                      , base >= 4.8 && < 4.11
                      , base64-bytestring
                      , bytestring >= 0.10.6.0
                      , containers
                      , errors
                      , lens
                      , lifted-base
                      , mtl
                      , reflex >= 0.5.0
                      , safe
                      , stm
                      , text
                      , time
                      , transformers
                      , transformers-base
                      , vector
