name:                gonimo-common
version:             1.0.2.2
homepage:            gonimo.com
license:             AGPL-3
license-file:        LICENSE
author:              Robert Klotzner

maintainer:          robert[dot]klotzner[at]gmx[dot]at

category:            Web

build-type:          Simple

cabal-version:       >=1.10

Flag dev
    Description:   Turn on development settings.
    Default:       False

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  if flag(dev)
      cpp-options:   -DDEVELOPMENT
      ghc-options:   -Wall -fwarn-tabs -O0
  else
      ghc-options:   -Wall -Werror -fwarn-tabs -O2

  exposed-modules: Gonimo.SocketAPI
                 , Gonimo.SocketAPI.Types
                 , Gonimo.Types
                 , Gonimo.Server.Error
                 , Gonimo.Prelude
                 , Gonimo.I18N
                 , Gonimo.Constants

  default-extensions: ConstraintKinds
                    , DataKinds
                    , DeriveGeneric
                    , GeneralizedNewtypeDeriving
                    , OverloadedStrings
                    , PolyKinds
                    , TypeOperators
                    , ScopedTypeVariables
                    , FlexibleContexts

  build-depends:        base >= 4.8 && < 4.11
                      , aeson
                      , attoparsec
                      , base64-bytestring
                      , bytestring >= 0.10.6.0
                      , containers
                      , text
                      , time
                      , errors
                      , safe
                      , transformers
                      , transformers-base
                      , lifted-base
                      , lens
                      , data-default
                      , generic-deriving
