name:                gonimo-front-android
version:             1.0.2.2
homepage:            gonimo.com
license:             AGPL-3
license-file:        LICENSE
author:              Robert Klotzner

maintainer:          robert[dot]klotzner[at]gmx[dot]at

category:            Web

build-type:          Simple

cabal-version:       >=1.10

Flag dev
    Description:   Turn on development settings.
    Default:       False

executable gonimo-front-android
  if impl(ghcjs)
    buildable: False
  ghc-options: -optl-fuse-ld=gold
  ld-options:  -fuse-ld=gold
  if flag(dev) 
      cpp-options:   -DDEVELOPMENT
      ghc-options:   -Wall -threaded
  else
      ghc-options:      -Werror -threaded -O2 -rtsopts -with-rtsopts=-N -Wall
  main-is:            Android.hs
  hs-source-dirs:      app
  default-language:    Haskell2010

  default-extensions: 

  build-depends:      base >=4.8 && <5.0
                    , gonimo-front
                    , reflex-dom
                    , android-activity
                    , jsaddle
                    , data-default
                    , ghcjs-dom
                    , aeson
                    , bytestring
                    , http-types
                    , gonimo-common
                    , utf8-string
                    , lens
                    , text