name:                gonimo-front-ghcjs
version:             1.0.2.2
homepage:            gonimo.com
license:             AGPL-3
license-file:        LICENSE
author:              Robert Klotzner

maintainer:          robert[dot]klotzner[at]gmx[dot]at

category:            Web

build-type:          Custom

cabal-version:       >=1.10

Flag dev
    Description:   Turn on development settings.
    Default:       False

custom-setup
    setup-depends: base >=4.8 && <4.10
                 , Cabal >= 1.18 && < 1.25
                 , process

executable gonimo-front-ghcjs
  ghc-options: -optl-fuse-ld=gold
  ld-options:  -fuse-ld=gold
  if flag(dev) 
      cpp-options:   -DDEVELOPMENT -DGHCJS_BROWSER
      ghc-options:   -Wall -threaded
      ghcjs-options: -debug
  else
      cpp-options:   -DGHCJS_BROWSER
      ghc-options:        -O1 -rtsopts -with-rtsopts=-N -Wall
      ghcjs-options:       -dedupe
  main-is:            GonimoFront.hs
  hs-source-dirs:      app
  default-language:    Haskell2010

  default-extensions: ConstraintKinds
                    , DataKinds
                    , DeriveGeneric
                    , GADTs
                    , GeneralizedNewtypeDeriving
                    , OverloadedStrings
                    , PolyKinds
                    , TypeFamilies
                    , TypeOperators
                    , ScopedTypeVariables
                    , FlexibleContexts

  build-depends:      base >=4.8 && <5.0
                    , gonimo-front
                    

