name:                gonimo-front-warp
version:             1.0.2.2
homepage:            gonimo.com
license:             AGPL-3
license-file:        LICENSE
author:              Robert Klotzner

maintainer:          robert[dot]klotzner[at]gmx[dot]at

category:            Web

build-type:          Simple

cabal-version:       >=1.10

Flag dev
    Description:   Turn on development settings.
    Default:       False

executable gonimo-front-warp
  ghc-options: -optl-fuse-ld=gold
  ld-options:  -fuse-ld=gold
  if flag(dev) 
      cpp-options:   -DDEVELOPMENT
      ghc-options:   -Wall -threaded
  else
      ghc-options:        -O2 -rtsopts -with-rtsopts=-N -Wall
  main-is:            Warp.hs
  hs-source-dirs:      app
  default-language:    Haskell2010

  default-extensions:

  build-depends:      base >=4.8 && <4.10
                    , gonimo-front
                    , reflex-dom
                    , warp
                    , wai-middleware-static
                    , jsaddle
                    , jsaddle-warp
                    , websockets
                    , jsaddle-dom
                    , directory
                    , filepath

