name:                gonimo-front
version:             0.1-test
homepage:            gonimo.com
license:             AGPL-3
license-file:        LICENSE
author:              Robert Klotzner

maintainer:          robert[dot]klotzner[at]gmx[dot]at

category:            Web

build-type:          Custom

cabal-version:       >=1.10

Flag dev
    Description:   Turn on development settings.
    Default:       False

custom-setup
    setup-depends: base >=4.8 && <4.10
                 , Cabal >= 1.18 && < 1.25
                 -- , bytestring
                 -- , conduit
                 -- , conduit-extra
                 -- , containers
                 -- , directory
                 -- , filepath
                 -- , pureMD5
                 -- , shake
                 -- , stringsearch

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  if flag(dev) 
      cpp-options:   -DDEVELOPMENT -DGHCJS_BROWSER
      ghc-options:   -Wall -fwarn-tabs -O0 -debug
  else
      ghc-options:   -Wall -Werror -fwarn-tabs -fno-warn-unused-imports -fno-warn-redundant-constraints -O2
      ghcjs-options: -dedupe
      cpp-options:   -DGHCJS_BROWSER

  default-extensions: ConstraintKinds
                    , DataKinds
                    , DeriveGeneric
                    , GeneralizedNewtypeDeriving
                    , OverloadedStrings
                    , PolyKinds
                    , TypeOperators
                    , ScopedTypeVariables
                    , FlexibleContexts
  build-depends:      aeson
                    , base >=4.8 && <4.10
                    , Cabal
                    , errors
                    , bytestring
                    , text
                    , ghcjs-dom
                    , gonimo-common
                    , reflex
                    , lens
                    , dependent-map
                    , safe
                    , containers
                    , transformers
                    , http-types
                    , time
                    , mtl
                    , data-default
                    , lifted-base
                    , jsaddle
                    , reflex-dom-core
                    -- , ghcjs-base
  if !impl(ghcjs)
     build-depends: jsaddle-warp
                  , jsaddle-dom

  exposed-modules:    Gonimo.Client.Storage
                    , Gonimo.Client.Config
                    , Gonimo.Client.Storage.Keys
                    , Gonimo.Client.Auth
                    , Gonimo.Client.Server
                    , Gonimo.Client.Invite
                    , Gonimo.Client.Invite.UI
                    , Gonimo.Client.Invite.Internal
                    , Gonimo.Client.AcceptInvitation
                    , Gonimo.Client.AcceptInvitation.UI
                    , Gonimo.Client.AcceptInvitation.Internal
                    , Gonimo.Client.MessageBox
                    , Gonimo.Client.MessageBox.UI
                    , Gonimo.Client.MessageBox.Internal
                    , Gonimo.Client.Family
                    , Gonimo.Client.Family.Internal
                    , Gonimo.Client.Family.UI
                    , Gonimo.Client.Family.RoleSelector
                    , Gonimo.Client.DeviceList
                    , Gonimo.Client.DeviceList.Internal
                    , Gonimo.Client.DeviceList.UI
                    , Gonimo.Client.ConfirmationButton
                    , Gonimo.Client.EditStringButton
                    , Gonimo.Client.Subscriber
                    , Gonimo.Client.Reflex
                    , Gonimo.Client.Reflex.Dom
                    , Gonimo.Client.App
                    , Gonimo.Client.App.Internal
                    , Gonimo.Client.App.Types
                    , Gonimo.Client.App.UI
                    , Gonimo.Client.NavBar.Internal
                    , Gonimo.Client.NavBar.UI
                    , Gonimo.Client.NavBar
                    , Gonimo.Client.Baby.Internal
                    , Gonimo.Client.Baby.Socket
                    , Gonimo.Client.Baby.UI
                    , Gonimo.Client.Baby
                    , Gonimo.DOM.Navigator.MediaDevices.Types
                    , Gonimo.DOM.Navigator.MediaDevices.Internal
                    , Gonimo.DOM.Navigator.MediaDevices
                    , Gonimo.DOM.Window.Internal
                    , Gonimo.Client.Prelude
                    , Gonimo.Client.Util
                    , Gonimo.Client.WebRTC.Message
                    , Gonimo.Client.WebRTC.Channel
                    , Gonimo.Client.Parent.Connections
                    , Gonimo.Client.Parent.UI
                    , Gonimo.Client.Parent



executable gonimo-front
  if flag(dev) 
      cpp-options:   -DDEVELOPMENT -DGHCJS_BROWSER
      ghc-options:   -Wall -threaded
      ghcjs-options: -debug
  else
      cpp-options:   -DGHCJS_BROWSER
      ghc-options:        -O2 -rtsopts -with-rtsopts=-N -Wall
      ghcjs-options:       -dedupe
  main-is:            GonimoFront.hs
  hs-source-dirs:      app
  default-language:    Haskell2010

  default-extensions: ConstraintKinds
                    , DataKinds
                    , DeriveGeneric
                    , GADTs
                    , GeneralizedNewtypeDeriving
                    , OverloadedStrings
                    , PolyKinds
                    , TypeFamilies
                    , TypeOperators
                    , ScopedTypeVariables
                    , FlexibleContexts

  build-depends:      base >=4.8 && <4.10
                    , aeson
                    , reflex
                    , containers
                    , safe
                    , text
                    , lens
                    , gonimo-common
                    , gonimo-front
                    -- for gonimo-common:
                    , aeson
                    , attoparsec
                    , base64-bytestring
                    , bytestring >= 0.10.6.0
                    , containers
                    , persistent-template
                    , text
                    , time
                    , vector
                    , persistent
                    , errors
                    , http-api-data
                    , data-default
                    , reflex-dom-core
                    , jsaddle-warp
                    , jsaddle
                    