name:                gonimo-front
version:             0.1-test
homepage:            gonimo.com
license:             AGPL-3
license-file:        LICENSE
author:              Robert Klotzner

maintainer:          robert[dot]klotzner[at]gmx[dot]at

category:            Web

build-type:          Custom

cabal-version:       >=1.10

Flag dev
    Description:   Turn on development settings.
    Default:       False

custom-setup
    setup-depends: base >=4.8 && <4.10
                 , Cabal >= 1.18 && < 1.25
                 , process
                 -- , bytestring
                 -- , conduit
                 -- , conduit-extra
                 -- , containers
                 -- , directory
                 -- , filepath
                 -- , pureMD5
                 -- , shake
                 -- , stringsearch

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options: -optl-fuse-ld=gold
  ld-options:  -fuse-ld=gold
  if flag(dev) 
      cpp-options:   -DDEVELOPMENT -DGHCJS_BROWSER
      ghc-options:   -Wall -fwarn-tabs -O0 -debug
  else
      ghc-options:   -Wall -Werror -fwarn-tabs -fno-warn-unused-imports -fno-warn-redundant-constraints -fno-warn-deprecations -O2
      ghcjs-options: -dedupe
      cpp-options:   -DGHCJS_BROWSER

  default-extensions: ConstraintKinds
                    , DataKinds
                    , DeriveGeneric
                    , GeneralizedNewtypeDeriving
                    , OverloadedStrings
                    , PolyKinds
                    , TypeOperators
                    , ScopedTypeVariables
                    , FlexibleContexts
                    , GADTs
  build-depends:      aeson
                    , base >=4.8 && <4.10
                    , Cabal
                    , errors
                    , bytestring
                    , text
                    , ghcjs-dom
                    , gonimo-common
                    , reflex
                    , lens
                    , dependent-map
                    , safe
                    , containers
                    , transformers
                    , http-types
                    , time
                    , mtl
                    , data-default
                    , lifted-base
                    , jsaddle
                    , reflex-dom-core
  if !impl(ghcjs)
     build-depends: jsaddle-dom
  if impl(ghcjs)
     build-depends: ghcjs-base

  exposed-modules:    Gonimo.Client.Storage
                    , Gonimo.Client.AcceptInvitation
                    , Gonimo.Client.AcceptInvitation.Internal
                    , Gonimo.Client.AcceptInvitation.UI
                    , Gonimo.Client.AcceptInvitation.UI.I18N
                    , Gonimo.Client.App
                    , Gonimo.Client.App.Internal
                    , Gonimo.Client.App.Types
                    , Gonimo.Client.App.UI
                    , Gonimo.Client.App.UI.I18N
                    , Gonimo.Client.Auth
                    , Gonimo.Client.Auth.I18N
                    , Gonimo.Client.Baby
                    , Gonimo.Client.Baby.Internal
                    , Gonimo.Client.Baby.Socket
                    , Gonimo.Client.Baby.UI
                    , Gonimo.Client.Baby.UI.I18N
                    , Gonimo.Client.Config
                    , Gonimo.Client.ConfirmationButton
                    , Gonimo.Client.ConfirmationButton.I18N
                    , Gonimo.Client.DeviceList
                    , Gonimo.Client.DeviceList.Internal
                    , Gonimo.Client.DeviceList.UI
                    , Gonimo.Client.DeviceList.UI.I18N
                    , Gonimo.Client.EditStringButton
                    , Gonimo.Client.EditStringButton.I18N
                    , Gonimo.Client.Family
                    , Gonimo.Client.Family.Internal
                    , Gonimo.Client.Family.RoleSelector
                    , Gonimo.Client.Family.RoleSelector.I18N
                    , Gonimo.Client.Family.UI
                    , Gonimo.Client.Family.UI.I18N
                    , Gonimo.Client.I18N
                    , Gonimo.Client.I18N.UI
                    , Gonimo.Client.Invite
                    , Gonimo.Client.Invite.Internal
                    , Gonimo.Client.Invite.UI
                    , Gonimo.Client.Invite.UI.I18N
                    , Gonimo.Client.Main
                    , Gonimo.Client.MessageBox
                    , Gonimo.Client.MessageBox.Internal
                    , Gonimo.Client.MessageBox.UI
                    , Gonimo.Client.MessageBox.UI.I18N
                    , Gonimo.Client.NavBar
                    , Gonimo.Client.NavBar.Internal
                    , Gonimo.Client.NavBar.UI
                    , Gonimo.Client.Parent
                    , Gonimo.Client.Parent.Connections
                    , Gonimo.Client.Parent.UI
                    , Gonimo.Client.Parent.UI.I18N
                    , Gonimo.Client.Prelude
                    , Gonimo.Client.Reflex
                    , Gonimo.Client.Reflex.Dom
                    , Gonimo.Client.Reflex.Dom.WebSocket
                    , Gonimo.Client.Reflex.Dom.WebSocket.Internal
                    , Gonimo.Client.Server
                    , Gonimo.Client.Storage.Keys
                    , Gonimo.Client.Subscriber
                    , Gonimo.Client.Util
                    , Gonimo.Client.WebRTC.Channel
                    , Gonimo.Client.WebRTC.Channels
                    , Gonimo.DOM.Navigator.MediaDevices
                    , Gonimo.DOM.Navigator.MediaDevices.Internal
                    , Gonimo.DOM.Navigator.MediaDevices.Types
                    , Gonimo.DOM.Window.Internal
                    , Gonimo.SocketAPI.Translations



executable gonimo-front
  ghc-options: -optl-fuse-ld=gold
  ld-options:  -fuse-ld=gold
  if flag(dev) 
      cpp-options:   -DDEVELOPMENT -DGHCJS_BROWSER
      ghc-options:   -Wall -threaded
      ghcjs-options: -debug
  else
      cpp-options:   -DGHCJS_BROWSER
      ghc-options:        -O2 -rtsopts -with-rtsopts=-N -Wall
      ghcjs-options:       -dedupe
  main-is:            GonimoFront.hs
  hs-source-dirs:      app
  default-language:    Haskell2010

  default-extensions: ConstraintKinds
                    , DataKinds
                    , DeriveGeneric
                    , GADTs
                    , GeneralizedNewtypeDeriving
                    , OverloadedStrings
                    , PolyKinds
                    , TypeFamilies
                    , TypeOperators
                    , ScopedTypeVariables
                    , FlexibleContexts

  build-depends:      base >=4.8 && <4.10
                    , aeson
                    , reflex
                    , containers
                    , safe
                    , text
                    , lens
                    , gonimo-common
                    , gonimo-front
                    , aeson
                    , attoparsec
                    , base64-bytestring
                    , bytestring >= 0.10.6.0
                    , containers
                    , text
                    , time
                    , vector
                    , errors
                    , data-default
                    , reflex-dom-core
                    , jsaddle
                    , ghcjs-dom
                    , mtl
  if !impl(ghcjs)
     build-depends: wai-middleware-static
                    , warp
                    , websockets
                    , jsaddle
                    , wai-middleware-static
                    , jsaddle-warp
                    

executable gonimo-front-android
  if impl(ghcjs)
    buildable: False
  ghc-options: -optl-fuse-ld=gold
  ld-options:  -fuse-ld=gold
  if flag(dev) 
      cpp-options:   -DDEVELOPMENT
      ghc-options:   -Wall -threaded
      ghcjs-options: -debug
  else
      ghc-options:        -O2 -rtsopts -with-rtsopts=-N -Wall
  main-is:            Mobile.hs
  hs-source-dirs:      app
  default-language:    Haskell2010

  default-extensions: 

  build-depends:      base >=4.8 && <4.10
                    , gonimo-front
                    , reflex-dom