name:                gonimo-front
version:             1.0.2.2
homepage:            gonimo.com
license:             AGPL-3
license-file:        LICENSE
author:              Robert Klotzner

maintainer:          robert[dot]klotzner[at]gmx[dot]at

category:            Web

build-type:          Simple

cabal-version:       >=1.10

Flag dev
    Description:   Turn on development settings.
    Default:       False

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options: -optl-fuse-ld=gold
  ld-options:  -fuse-ld=gold
  if flag(dev) 
      cpp-options:   -DDEVELOPMENT -DGHCJS_BROWSER
      ghc-options:   -Wall -fwarn-tabs -O0 -debug
  else
      ghc-options:   -Wall  -O1 -fwarn-tabs -fno-warn-unused-imports -fno-warn-redundant-constraints -fno-warn-deprecations
      ghcjs-options: -dedupe
      cpp-options:   -DGHCJS_BROWSER

  default-extensions: ConstraintKinds
                    , DataKinds
                    , DeriveGeneric
                    , GeneralizedNewtypeDeriving
                    , OverloadedStrings
                    , PolyKinds
                    , TypeOperators
                    , ScopedTypeVariables
                    , FlexibleContexts
                    , GADTs
  build-depends:      Cabal
                    , aeson
                    , base >=4.8 && <5.0
                    , bytestring
                    , containers
                    , data-default
                    , errors
                    , generic-deriving
                    , ghcjs-dom
                    , gonimo-common
                    , http-types
                    , jsaddle
                    , lens
                    , lifted-base
                    , mtl
                    , reflex
                    , reflex-dom-core
                    , safe
                    , text
                    , time
                    , transformers
                    , network-uri
                    , filepath
                    -- , uri-bytestring >= 0.2.3.3 -- Does depend on TH!
  if !impl(ghcjs)
     build-depends: jsaddle-dom
  if impl(ghcjs)
     build-depends: ghcjs-base

  exposed-modules:    Gonimo.Client.Main
                    , Gonimo.Client.AcceptInvitation
                    , Gonimo.Client.AcceptInvitation.UI
                    , Gonimo.Client.AcceptInvitation.UI.I18N
                    , Gonimo.Client.Account
                    , Gonimo.Client.Account.Impl
                    , Gonimo.Client.App
                    , Gonimo.Client.App.Internal
                    , Gonimo.Client.App.Types
                    , Gonimo.Client.App.UI
                    , Gonimo.Client.App.UI.I18N
                    , Gonimo.Client.Auth
                    , Gonimo.Client.Auth.I18N
                    , Gonimo.Client.Auth.Impl
                    , Gonimo.Client.Baby
                    , Gonimo.Client.Baby.Internal
                    , Gonimo.Client.Baby.Socket
                    , Gonimo.Client.Baby.UI
                    , Gonimo.Client.Baby.UI.I18N
                    , Gonimo.Client.ConfirmationButton
                    , Gonimo.Client.ConfirmationButton.I18N
                    , Gonimo.Client.DeviceList
                    , Gonimo.Client.DeviceList.Internal
                    , Gonimo.Client.DeviceList.UI
                    , Gonimo.Client.DeviceList.UI.I18N
                    , Gonimo.Client.EditStringButton
                    , Gonimo.Client.EditStringButton.I18N
                    , Gonimo.Client.Environment
                    , Gonimo.Client.Family
                    , Gonimo.Client.Family.Internal
                    , Gonimo.Client.Family.RoleSelector
                    , Gonimo.Client.Family.RoleSelector.I18N
                    , Gonimo.Client.Family.UI
                    , Gonimo.Client.Family.UI.I18N
                    , Gonimo.Client.Host
                    , Gonimo.Client.Host.Impl
                    , Gonimo.Client.Invite
                    , Gonimo.Client.Invite.Internal
                    , Gonimo.Client.Invite.UI
                    , Gonimo.Client.Invite.UI.I18N
                    , Gonimo.Client.JS.Audio
                    , Gonimo.Client.JS.OYD
                    , Gonimo.Client.JS.Volume
                    , Gonimo.Client.MessageBox
                    , Gonimo.Client.MessageBox.Internal
                    , Gonimo.Client.MessageBox.UI
                    , Gonimo.Client.MessageBox.UI.I18N
                    , Gonimo.Client.Model
                    , Gonimo.Client.NavBar
                    , Gonimo.Client.NavBar.Internal
                    , Gonimo.Client.NavBar.UI
                    , Gonimo.Client.Parent
                    , Gonimo.Client.Parent.Connections
                    , Gonimo.Client.Parent.UI
                    , Gonimo.Client.Parent.UI.I18N
                    , Gonimo.Client.Prelude
                    , Gonimo.Client.Reflex
                    , Gonimo.Client.Reflex.Dom
                    , Gonimo.Client.Reflex.Dom.WebSocket
                    , Gonimo.Client.Reflex.Dom.WebSocket.Internal
                    , Gonimo.Client.Router
                    , Gonimo.Client.Router.Impl
                    , Gonimo.Client.Router.Impl.Browser
                    , Gonimo.Client.Router.Impl.Native
                    , Gonimo.Client.Server
                    , Gonimo.Client.Settings
                    , Gonimo.Client.Settings.UI
                    , Gonimo.Client.Storage
                    , Gonimo.Client.Storage.Keys
                    , Gonimo.Client.Subscriber
                    , Gonimo.Client.Subscriber.Impl
                    , Gonimo.Client.Util
                    , Gonimo.Client.WebRTC.Channel
                    , Gonimo.Client.WebRTC.Channels
                    , Gonimo.DOM.Navigator.MediaDevices
                    , Gonimo.DOM.Navigator.MediaDevices.Internal
                    , Gonimo.DOM.Navigator.MediaDevices.Types
                    , Gonimo.DOM.Window
                    , Gonimo.DOM.Window.Internal
                    , Gonimo.SocketAPI.Translations
                    , Reflex.Class.Extended
                    , Reflex.Dom.Contrib.Router
                    , Reflex.Dynamic.Extended
